deploy/k8s/clusters/edge/patches/webhook-cpu-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-dispatcher
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: dispatcher
