deploy/k8s/clusters/edge/patches/ingress-cpu-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edu-ml-api
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - cpu-test2clusteres.ru
      secretName: edu-ml-tls
    - secretName: edu-ml-tls
  rules:
    - host: cpu-test2clusteres.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edge-balancer
                port:
                  number: 80
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edge-balancer
                port:
                  number: 80
